--- a/.github/workflows/CI-MAUI.yml
+++ b/.github/workflows/CI-MAUI.yml
@@ -99,7 +99,7 @@ jobs:
         run: dotnet restore MauiApp1/MauiApp1.csproj
 
       - name: Build MAUI iOS
-        run: dotnet build sMauiApp1/MauiApp1.csproj -c Release -f net6.0-ios --no-restore /p:buildForSimulator=True /p:packageApp=True /p:ArchiveOnBuild=False
+        run: dotnet build MauiApp1/MauiApp1.csproj -c Release -f net6.0-ios --no-restore /p:buildForSimulator=True /p:packageApp=True /p:ArchiveOnBuild=False
 
       - name: Upload iOS Artifact
         uses: actions/upload-artifact@v3.1.0
