--- a/.github/workflows/CI-MAUI.yml
+++ b/.github/workflows/CI-MAUI.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup .NET 6
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: 6.0.303
           include-prerelease: true
           
       - uses: actions/setup-java@v2
@@ -61,7 +61,7 @@ jobs:
       - name: Setup .NET 6
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: 6.0.303
 
       - name: Install MAUI Workload
         run: dotnet workload install maui --ignore-failed-sources
@@ -90,7 +90,7 @@ jobs:
       - name: Setup .NET 6
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: 6.0.303
 
       - name: Install MAUI Workload
         run: dotnet workload install maui --ignore-failed-sources
@@ -119,7 +119,7 @@ jobs:
       - name: Setup .NET 6
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: 6.0.303
 
       - name: Install MAUI Workload
         run: dotnet workload install maui --ignore-failed-sources
